added more images, fixed display on mobile

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <nav class="nav-bar">
         <li>
-            <ul>About</ul>
-            <ul>Afrobeats</ul>
+            <ul><a href="#about">About</a></ul>
+            <ul><a href="#testimonial">Testimonial</a></ul>
             <ul>Tour</ul>
             <ul>Membership</ul>
             <ul>Contact us</ul>
@@ -21,10 +21,10 @@
     </nav>
     <div class="intro">
         <div class="flag" id="top"></div>
-        <h1>Santana Rhythms</h1>
+        <h1><img src="media/Santana No Background.png"></h1>
         <div class="flag" id="bottom"></div>
     </div>
-    <section class="about">
+    <section class="about" id="about">
         <h2>Santana Rhythms</h2>
         <p>We're a fanclub of afrobeats enthusiasts who absolutely love Santana's music.</p>
         <p>We regularly host listening parties, share his performances on social media, and discuss his influence. </p>
@@ -35,15 +35,14 @@
         <img src="media/santana2.jpg">
         <img src="media/santana4.jpg">
     </section>
-    <section class="tour">
-
+    <section class="testimonial" id="testimonial">
+        <h1>Santana truly saved my life. He awakened the African rhythms deep within me. Santana is the king of Afrobeats.</h1>
+        <p>-A. Lee - Afrobeats enthusiast</p>
     </section>
     <section class="photos">
-
-    </section>
-    <section class="contact">
-        <p>Email us</p>
-        <p>Number</p>
+        <img src="media/santana5.jpg">
+        <img src="media/santana6.png">
+        <img src="media/santana7.jpg">
     </section>
 </body>
 </html>
