--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <li>
             <ul><a href="#about">About</a></ul>
             <ul><a href="#testimonial">Testimonial</a></ul>
-            <ul>Tour</ul>
-            <ul>Membership</ul>
-            <ul>Contact us</ul>
+            <ul><a href="#contact">Contact us</a></ul>
         </li>
     </nav>
     <div class="intro">
@@ -43,6 +41,10 @@
         <img src="media/santana5.jpg">
         <img src="media/santana6.png">
         <img src="media/santana7.jpg">
+    </section>
+    <section class="contact" id="contact">
+        <h1>Want to join the club?</h1>
+        <p>Email us <a id="rick" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">here</a></p>
     </section>
 </body>
 </html>
