--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="about" id="about">
         <h2>Santana Rhythms</h2>
         <p>We're a fanclub of afrobeats enthusiasts who absolutely love Santana's music.</p>
-        <p>We regularly host listening parties, share his performances on social media, and discuss his influence. </p>
+        <p>We regularly host listening parties, share his performances on social media, and discuss his influence within the wider afrobeats movement.</p>
         <p>Our dedication to Santana demonstrates how his music brings fans of afrobeats together.</p>
     </section>
     <section class="photos">
