Fixed copy for testimonial

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     </section>
     <section class="testimonial" id="testimonial">
         <h1>Santana truly saved my life. He awakened the African rhythms deep within me. Santana is the king of Afrobeats.</h1>
-        <p>-A. Lee - Afrobeats enthusiast</p>
+        <p>A. Lee</p>
+        <p>Afrobeats enthusiast</p>
     </section>
     <section class="photos">
         <img src="media/santana5.jpg">
